<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/employee_lists"
            android:textColor="@android:color/holo_green_dark"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50sp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_green_dark"
                android:text="@string/lists_employee"
                android:textSize="20sp"
                android:layout_marginEnd="25sp"/>
        <Button
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:background="@drawable/ic_baseline_list_24"
            android:id="@+id/ListEmployee"/>
        </LinearLayout>
        <Button
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginTop="250sp"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:textColor="@android:color/holo_green_dark"
            android:layout_marginBottom="50sp"
            android:id="@+id/login_in"/>
        <Button
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:id="@+id/sign_up"/>
    </LinearLayout>
</ScrollView>