<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:id="@+id/emailL"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="25sp"
            android:drawableEnd="@drawable/ic_baseline_emoji_emotions_24"
            android:drawableRight="@drawable/ic_baseline_emoji_emotions_24"
            android:layout_marginBottom="50sp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="25sp"
            android:id="@+id/passwordL"
            android:inputType="textPassword"
            android:drawableEnd="@drawable/ic_baseline_security_24"
            android:drawableRight="@drawable/ic_baseline_security_24"
            android:layout_marginBottom="50sp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:text="@string/login"
            android:id="@+id/loginL"/>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/prog"
            android:visibility="invisible"/>
    </LinearLayout>
</ScrollView>